# ODAT-SE

./: .gitignore  CMakeLists.txt  README.md  index.html  pyproject.toml
.github/workflows/: build_docs.yml  deploy_docs.yml  deploy_pypi.yml  main.yml  pip_install.yml
doc/: make.sh
doc/api/source/: .gitignore  conf.py  index.rst
doc/common/: theme_shared.py
doc/en/source/: acknowledgement.rst  conf.py  contact.rst  gallery.rst  index.rst  input.rst  introduction.rst  output.rst  start.rst  tool.rst
doc/ja/source/: acknowledgement.rst  conf.py  contact.rst  gallery.rst  index.rst  input.rst  introduction.rst  output.rst  start.rst  tool.rst
manual/deploy_api_docs/api/: genindex.html  index.html  modules.html  objects.inv  odatse._info.html  odatse._main.html  odatse._runner.html  odatse.algorithm._algorithm.html  odatse.algorithm.bayes.html  odatse.algorithm.exchange.html  odatse.algorithm.html  odatse.algorithm.mapper_mpi.html  odatse.algorithm.min_search.html  odatse.algorithm.montecarlo.html  odatse.algorithm.pamc.html  odatse.domain._domain.html  odatse.domain.html  odatse.domain.meshgrid.html  odatse.domain.region.html  odatse.exception.html  odatse.html  odatse.mpi.html  odatse.solver._solver.html  odatse.solver.analytical.html  odatse.solver.function.html  odatse.solver.html  odatse.util.graph.html  odatse.util.html  odatse.util.limitation.html  odatse.util.logger.html  odatse.util.mapping.html  odatse.util.neighborlist.html  odatse.util.read_matrix.html  odatse.util.resampling.html  odatse.util.separateT.html  odatse.util.toml.html  py-modindex.html  search.html  searchindex.js
manual/deploy_api_docs/en/: .buildinfo  introduction.html  output.html  search.html
manual/deploy_api_docs/ja/: .buildinfo  introduction.html  output.html
manual/main/api/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  odatse._info.html  odatse._initialize.html  odatse._main.html  odatse._runner.html  odatse.algorithm._algorithm.html  odatse.algorithm.bayes.html  odatse.algorithm.exchange.html  odatse.algorithm.gather.html  odatse.algorithm.html  odatse.algorithm.mapper_mpi.html  odatse.domain.html  (+30 more)
sample/analytical/: plot_himmel.py
sample/gpr/: gpr.py  input.toml
sample/linreg_with_noise/: data.txt  data_gen.py  data_noise1.txt  data_noise3.txt  data_noise5.txt  input.toml  input_dim2.toml  linreg_with_noise.py  parameters.txt
sample/mip/: alan.py  cvxnonsep_normcon20.py  synthes2.py
sample/parallel_solver/: README.md  do.sh  input.toml  par_test.py  parallel_solver.py
sample/qubo/: qubo_mats.py  run_qubo_test.py
sample/user_function/: input.toml  simple.py
script/: extract_combined.py  plt_1D_histogram.py  plt_2D_histogram.py  plt_model_evidence.py  separateT.py  summarize_each_T.py
src/: odatse_main.py  odatse_neighborlist.py
src/odatse/: __init__.py  __main__.py  _info.py  _initialize.py  _main.py  _runner.py  exception.py  mpi.py
src/odatse_kkr/: __init__.py  exceptions.py  input.py  retry.py  solver.py
tests/: CMakeLists.txt  almost_diff.py
tests/bayes/: do.sh
tests/bayes_continue/: do.sh
tests/exchange/: do.sh
tests/exchange_continue/: do.sh
tests/exchange_mesh/: do.sh
tests/mapper/: do.sh  ref.txt
tests/mapper_random/: do.sh  input.toml  ref.txt
tests/mapper_resume/: do.sh
tests/minsearch/: do.sh
tests/pamc/: diff.py  do.sh
tests/pamc_continue/: do.sh
tests/pamc_varied/: do.sh  input.toml  ref.txt
tests/pamc_varied_continue/: input1a.toml  input1b.toml  input2.toml
tests/parallel_solver/: CMakeLists.txt  parallel_solver.py  plot_colormap_2d.py  square_grid.py  triangular_grid.py
tests/parallel_solver/bayes_grid/: do.sh  input.toml  ref_BayesData.txt
tests/parallel_solver/bayes_meshfile/: do.sh  input.toml  ref_BayesData.txt
tests/parallel_solver/exchange_continuous/: do.sh  input.toml  ref_best_result.txt
tests/parallel_solver/exchange_continuous_single/: input.toml  ref_best_result.txt
tests/parallel_solver/exchange_grid/: input.toml
tests/parallel_solver/exchange_meshfile/: do.sh  input.toml  ref_best_result.txt
tests/parallel_solver/mapper_grid/: do.sh  input.toml  ref_ColorMap.txt
tests/parallel_solver/mapper_meshfile/: do.sh  input.toml  ref_ColorMap.txt
tests/parallel_solver/minsearch/: do.sh  input.toml  ref_res.txt
tests/parallel_solver/pamc_continuous/: input.toml
tests/parallel_solver/pamc_continuous_varied/: input.toml  ref_best_result.txt
tests/parallel_solver/pamc_grid/: do.sh  input.toml  ref_best_result.txt
tests/parallel_solver/pamc_meshfile/: input.toml
tests/parallel_solver/random_search/: do.sh  input.toml  ref_ColorMap.txt
tests/test_utilities/: diff_res_mc.py
tests/transform/: do.sh
tests/ttopt/: do.sh  input.toml  ref.txt
tests/ttopt_resume/: do.sh  input1.toml  input2.toml
tests/unit/: CMakeLists.txt  conftest.py  test_checkpoint_io.py  test_consensus.py  test_error_messages.py  test_exception.py  test_exchange_single_walker.py  test_gather.py  test_graph.py  test_info_from_file.py  test_logger.py  test_main_errors.py  test_min_search.py  test_minsearch_scaling.py  test_mpi.py  test_mutable_defaults.py  test_neighborlist.py  test_odatse_kkr.py  test_pamc_numerics.py  test_pamc_scheduling.py  test_rng_seed.py  test_script_separateT.py  test_separateT.py  test_separateT_script.py  test_separateT_stats.py  test_state.py  test_template.py  test_toml_version.py  test_ttopt_resume.py  test_version.py  test_writer.py  test_writer_combined_mode.py
(+843 files in other folders)
