[tool.poetry]
name = "ODAT-SE"
version = "3.0-dev"
description = "Open Data Analysis Tool for Science and Engineering"
authors = ["2DMAT developers <2dmat-dev@issp.u-tokyo.ac.jp>"]
license = "GPL-3.0-or-later"

readme = "README.md"
repository = "https://github.com/issp-center-dev/ODAT-SE"

packages = [
  { include = "odatse", from = "src" }
  ]

[tool.poetry.dependencies]
python = ">=3.6.8"
numpy = "^1.14"
tomli = ">=1.2"
scipy = {version = "^1", optional = true}
mpi4py = {version = "^3", optional = true}
physbo = {version = ">= 2.0.0", optional = true}

[tool.poetry.extras]
min_search = ["scipy"]
bayes = ["physbo"]
exchange = ["mpi4py"]
all = ["scipy", "mpi4py", "physbo"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pynvim = "^0.4.3"

[tool.poetry.scripts]
odatse = "odatse:main"
odatse_neighborlist = "odatse.util.neighborlist:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
