[project]
name = "ODAT-SE"
version = "3.1.0"
description = "Open Data Analysis Tool for Science and Engineering"
authors = [{ name = "2DMAT developers", email = "2dmat-dev@issp.u-tokyo.ac.jp" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MPL-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.14",
    "tomli>=1.2 ; python_full_version < '3.11'",
]

[project.optional-dependencies]
min_search = ["scipy>=1,<2"]
bayes = ["physbo>= 2.0.0"]
exchange = ["mpi4py>= 3.1.0"]
all = [
    "scipy>=1,<2",
    "mpi4py>= 3.1.0",
    "physbo>= 2.0.0",
]

[project.urls]
Repository = "https://github.com/issp-center-dev/ODAT-SE"

[project.scripts]
odatse = "odatse:main"
odatse_neighborlist = "odatse.util.neighborlist:main"

[tool.hatch.build.targets.sdist]
include = ["src/odatse"]

[tool.hatch.build.targets.wheel]
include = ["src/odatse"]

[tool.hatch.build.targets.wheel.sources]
"src/odatse" = "odatse"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
